src/styles/utilities.css
.Card {
    padding: 1.5rem;
    background-color: var(--colBg);
    border: 3px solid var(--colPri);
}

@media screen and (width < 850px) {
    .Card {
        padding: var(--outerPaddingMobile);
        border: none;
    }
}

.FlexList {
    margin-top: 0;
    padding-left: 0;
}

.VisuallyHidden {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
    border: 0;
}

.H2WithMargin {
    margin-bottom: 2rem;
}

.RouteInstruction {
    margin: 1rem 0;
}

.Error,
.Danger,
.Danger:hover,
.IconButton.Danger:hover {
    color: var(--colDanger);
}

.IconButton {
    position: relative;
    font-size: var(--fontSizeIconBtn);
    padding: 0.25rem;
    line-height: 0;
    user-select: none;
    border: none;
    width: 2rem;
    height: 2rem;

    .IconButton__RegularIcon,
    .IconButton__HoverIcon {
        position: absolute;
        top: 0.25rem;
        transition: all ease-in-out var(--transTime);
    }

    .IconButton__RegularIcon {
        visibility: visible;
        opacity: 1;
    }

    .IconButton__HoverIcon {
        visibility: hidden;
        opacity: 0;
    }
}

.IconButton:hover {
    color: var(--colPri);
    background-color: transparent;

    .IconButton__RegularIcon {
        visibility: hidden;
        opacity: 0;
    }

    .IconButton__HoverIcon {
        visibility: visible;
        opacity: 1;
    }
}

.IconButtonWithLabel {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    border: var(--lineWeight) solid var(--colPri);
}

.IconButtonWithLabel:hover {
    color: var(--colBg);
    background-color: var(--colPri);
}

.MainDialogContent {
    position: relative;
    margin: 1rem;
    color: var(--colPri);
    background-color: var(--colBg);
    border: var(--lineWeight) solid var(--colPri);
    padding: 3rem 2rem 2rem;
}

.DialogCloseBtn {
    position: absolute;
    top: 0.5rem;
    right: 0.5rem;
    padding: 0.2rem;
    border: none;
    display: grid;
    place-items: center;
}

.PriBtn {
    color: var(--colPri);
    background-color: var(--colAcc);
    border-color: var(--colAcc);
}

.PriBtn:hover {
    color: var(--colBg);
    background-color: var(--colPri);
    border-color: var(--colPri);
}

.TertBtn {
    border: none;
    text-decoration: underline;
    background-color: transparent;
    padding: 0;
}

.TertBtn:hover {
    color: var(--colPri);
    background-color: transparent;
}

.SplitBtn {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 0;
}

.SplitBtn .SplitBtn__Pri {
    white-space: nowrap;
    border-right-width: 0;
}

.SplitBtn .SplitBtn__Sec {
    width: 2.5rem;
    align-self: stretch;
}

.SplitBtn .SplitBtn__Sec .SplitBtn__SecBtn {
    width: 100%;
    height: 100%;
}

.SplitBtn--IsPri .SplitBtn__Pri,
.SplitBtn--IsPri .SplitBtn__Sec .SplitBtn__SecBtn {
    background-color: var(--colAcc);
    border-color: var(--colAcc);
}

.SplitBtn--IsPri .SplitBtn__Pri:hover,
.SplitBtn--IsPri .SplitBtn__Sec .SplitBtn__SecBtn:hover {
    color: var(--colBg);
    background-color: var(--colPri);
    border-color: var(--colPri);
}

.SplitBtn--IsPri .SplitBtn__Pri,
.SplitBtn--IsPri .SplitBtn__Pri:hover {
    border-right: var(--lineWeight) solid var(--colPri);
}

.AiRequestGroup {
    display: flex;
    flex-direction: column;
}

.RightAlignedButtonsContainer {
    margin-top: 2rem;
    display: flex;
    justify-content: flex-end;
    gap: 1rem;
}

